syntax = "proto3";

package claude;

option go_package = "github.com/jiangxiaolong/cpds-go/internal/grpc";

// Claude service for task execution
service ClaudeService {
  rpc ExecuteTask(TaskRequest) returns (TaskResponse);
}

message TaskRequest {
  string task_id = 1;
  string title = 2;
  string description = 3;
  string worker_id = 4;
}

message TaskResponse {
  string output = 1;
  bool success = 2;
  string error = 3;
  int64 tokens_used = 4;
}
